--- a/.github/workflows/w2.yml
+++ b/.github/workflows/w2.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["Failure"]
     types: [completed]
-    conclusion: "success"
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 jobs:
   build:
 
