--- a/.github/workflows/w2.yml
+++ b/.github/workflows/w2.yml
@@ -6,8 +6,8 @@ on:
     types: [completed]
 #    conclusion: 'success'
 #    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    if: ${{ conclusion == 'success' }}
 jobs:
+  if: ${{ github.event.workflow_run.conclusion == 'success' }}
   build:
 
     runs-on: ubuntu-latest
