--- a/.github/workflows/params-try.yml
+++ b/.github/workflows/params-try.yml
@@ -39,13 +39,12 @@ jobs:
         run: echo "name=date::$(date +'%Y%m%dT%H%M%S')" >> $GITHUB_OUTPUT
       - name: Cmd
         run: |
-          p2_qualifier=${{ inputs.sts4-language-servers-version }}
           p2_qualifier_param=""
-          if ! [[ -z ${p2_qualifier+x} ]]; then
+          if ! [[ -z ${p2_qualifier} ]]; then
             p2_qualifier_param="-Dp2.qualifier=${p2_qualifier}"
           fi  
           echo "mvn clean package \
           -P${{ inputs.eclipse_profile }} \
-          -${p2_qualifier_param} \
+          ${p2_qualifier_param} \
           -P${{ inputs.build_type }} -DskipTests=${{ inputs.skip_tests }} \
           -Dbuild.qualifier=${{ steps.timestamp.outputs.date }}"
