--- a/.github/workflows/params-try.yml
+++ b/.github/workflows/params-try.yml
@@ -42,10 +42,9 @@ jobs:
         run: echo "name=date::$(date +'%Y%m%dT%H%M%S')" >> $GITHUB_OUTPUT
       - name: Cmd
         run: |
-          p2_qualifier=${{ inputs.sts4-language-servers-version }}
           p2_qualifier_param=""
-          if ! [[ -z ${p2_qualifier} ]]; then
-            p2_qualifier_param="-Dp2.qualifier=${p2_qualifier}"
+          if ! [[ -z ${{ inputs.sts4-language-servers-version }} ]]; then
+            p2_qualifier_param="-Dp2.qualifier=${{ inputs.sts4-language-servers-version }}"
           fi  
           echo "mvn clean package \
           -P${{ inputs.eclipse_profile }} \
