--- a/.github/workflows/params-try.yml
+++ b/.github/workflows/params-try.yml
@@ -39,12 +39,13 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Timestamp
         id: timestamp
-        run: echo "name=date::$(date +'%Y%m%dT%H%M%S')" >> $GITHUB_OUTPUT
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - name: Cmd
         run: |
+          p2_qualifier=${{ inputs.sts4-language-servers-version }}
           p2_qualifier_param=""
-          if ! [[ -z ${{ inputs.sts4-language-servers-version }} ]]; then
-            p2_qualifier_param="-Dp2.qualifier=${{ inputs.sts4-language-servers-version }}"
+          if ! [[ -z ${p2_qualifier} ]]; then
+            p2_qualifier_param="-Dp2.qualifier=${p2_qualifier}"
           fi  
           echo "mvn clean package \
           -P${{ inputs.eclipse_profile }} \
