--- a/.github/workflows/params-try.yml
+++ b/.github/workflows/params-try.yml
@@ -34,12 +34,9 @@ jobs:
   eclipse-language-servers-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Timestamp
         id: timestamp
-        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        run: echo "date=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
       - name: Cmd
         run: |
           p2_qualifier=${{ inputs.sts4-language-servers-version }}
@@ -52,4 +49,19 @@ jobs:
           ${p2_qualifier_param} \
           -P${{ inputs.build_type }} -DskipTests=${{ inputs.skip_tests }} \
           -Dbuild.qualifier=${{ steps.timestamp.outputs.date }} \
-          -Dtimestamp=${{ steps.date.outputs.date }}"
+
+  job-e427:
+    runs-on: ubuntu-latest
+    needs: [ eclipse-language-servers-build ]
+    steps:
+      - name: Cmd
+        run: |
+          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}
+
+  job-e428:
+    runs-on: ubuntu-latest
+    needs: [ eclipse-language-servers-build ]
+    steps:
+      - name: Cmd
+        run: |
+          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}
