--- a/.github/workflows/params-try.yml
+++ b/.github/workflows/params-try.yml
@@ -48,7 +48,7 @@ jobs:
           -P${{ inputs.eclipse_profile }} \
           ${p2_qualifier_param} \
           -P${{ inputs.build_type }} -DskipTests=${{ inputs.skip_tests }} \
-          -Dbuild.qualifier=${{ steps.timestamp.outputs.date }} \
+          -Dbuild.qualifier=${{ steps.timestamp.outputs.date }}"
 
   job-e427:
     runs-on: ubuntu-latest
@@ -56,7 +56,7 @@ jobs:
     steps:
       - name: Cmd
         run: |
-          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}
+          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}"
 
   job-e428:
     runs-on: ubuntu-latest
@@ -64,4 +64,4 @@ jobs:
     steps:
       - name: Cmd
         run: |
-          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}
+          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}"
