--- a/.github/workflows/params-try.yml
+++ b/.github/workflows/params-try.yml
@@ -49,6 +49,8 @@ jobs:
           ${p2_qualifier_param} \
           -P${{ inputs.build_type }} -DskipTests=${{ inputs.skip_tests }} \
           -Dbuild.qualifier=${{ steps.timestamp.outputs.date }}"
+    outputs:
+      stamp: ${{ steps.timestamp.outputs.date }}
 
   job-e427:
     runs-on: ubuntu-latest
@@ -56,7 +58,7 @@ jobs:
     steps:
       - name: Cmd
         run: |
-          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}"
+          echo "Stamp ${{ job.eclipse-language-servers-build.outputs.date }}"
 
   job-e428:
     runs-on: ubuntu-latest
@@ -64,4 +66,4 @@ jobs:
     steps:
       - name: Cmd
         run: |
-          echo "Stamp ${{ job.eclipse-language-servers-build.steps.timestamp.outputs.date }}"
+          echo "Stamp ${{ job.eclipse-language-servers-build.outputs.date }}"
